--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,8 +1,26 @@
-@import 'grid';
-@import 'menu';
-@import 'mouse';
-@import 'main-page-laptop&monitor';
-@import 'main-page-mobile&tablet';
-@import 'page-about-me-laptop&monitor';
-@import 'page-about-me-mobile&tablet';
-@import 'style-podstawowe';
+@import 'Grid/grid';
+@import 'Menu/menu';
+@import 'Mouse/mouse';
+@import 'Main Page Laptop & Monitor/main-page-laptop&monitor';
+@import 'Main Page Mobile & Tablet/main-page-mobile&tablet-GalaxyS3';
+@import 'Main Page Mobile & Tablet/main-page-mobile&tablet-GalaxyS4';
+@import 'Main Page Mobile & Tablet/main-page-mobile&tablet-GalaxyS5';
+@import 'Main Page Mobile & Tablet/main-page-mobile&tablet-iPad3';
+@import 'Main Page Mobile & Tablet/main-page-mobile&tablet-iPads';
+@import 'Main Page Mobile & Tablet/main-page-mobile&tablet-iPhone4';
+@import 'Main Page Mobile & Tablet/main-page-mobile&tablet-iPhone5';
+@import 'Main Page Mobile & Tablet/main-page-mobile&tablet-iPhone6';
+@import 'Main Page Mobile & Tablet/main-page-mobile&tablet-iPhone6+';
+@import 'Main Page Mobile & Tablet/main-page-mobile&tablet-smartphones';
+@import 'Page About Me Laptop & Monitor/page-about-me-laptop&monitor';
+@import 'Page About Me Mobile & Tablet/page-about-me-mobile&tablet-GalaxyS3';
+@import 'Page About Me Mobile & Tablet/page-about-me-mobile&tablet-GalaxyS4';
+@import 'Page About Me Mobile & Tablet/page-about-me-mobile&tablet-GalaxyS5';
+@import 'Page About Me Mobile & Tablet/page-about-me-mobile&tablet-iPad3';
+@import 'Page About Me Mobile & Tablet/page-about-me-mobile&tablet-iPads';
+@import 'Page About Me Mobile & Tablet/page-about-me-mobile&tablet-iPhone4';
+@import 'Page About Me Mobile & Tablet/page-about-me-mobile&tablet-iPhone5';
+@import 'Page About Me Mobile & Tablet/page-about-me-mobile&tablet-iPhone6';
+@import 'Page About Me Mobile & Tablet/page-about-me-mobile&tablet-iPhone6+';
+@import 'Page About Me Mobile & Tablet/page-about-me-mobile&tablet-smartphones';
+@import 'Style Podstawowe/style-podstawowe';
