--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,25 +2,15 @@
 @import 'Menu/menu';
 @import 'Mouse/mouse';
 @import 'Main Page Laptop & Monitor/main-page-laptop&monitor';
-@import 'Main Page Mobile & Tablet/main-page-mobile&tablet-GalaxyS3';
-@import 'Main Page Mobile & Tablet/main-page-mobile&tablet-GalaxyS4';
-@import 'Main Page Mobile & Tablet/main-page-mobile&tablet-GalaxyS5';
-@import 'Main Page Mobile & Tablet/main-page-mobile&tablet-iPad3';
-@import 'Main Page Mobile & Tablet/main-page-mobile&tablet-iPads';
-@import 'Main Page Mobile & Tablet/main-page-mobile&tablet-iPhone4';
-@import 'Main Page Mobile & Tablet/main-page-mobile&tablet-iPhone5';
-@import 'Main Page Mobile & Tablet/main-page-mobile&tablet-iPhone6';
-@import 'Main Page Mobile & Tablet/main-page-mobile&tablet-iPhone6+';
-@import 'Main Page Mobile & Tablet/main-page-mobile&tablet-smartphones';
+
+@import 'Main Page Mobile & Tablet/main-page-large-mobile';
+@import 'Main Page Mobile & Tablet/main-page-medium-mobile';
+@import 'Main Page Mobile & Tablet/main-page-small-mobile';
+
 @import 'Page About Me Laptop & Monitor/page-about-me-laptop&monitor';
-@import 'Page About Me Mobile & Tablet/page-about-me-mobile&tablet-GalaxyS3';
-@import 'Page About Me Mobile & Tablet/page-about-me-mobile&tablet-GalaxyS4';
-@import 'Page About Me Mobile & Tablet/page-about-me-mobile&tablet-GalaxyS5';
-@import 'Page About Me Mobile & Tablet/page-about-me-mobile&tablet-iPad3';
-@import 'Page About Me Mobile & Tablet/page-about-me-mobile&tablet-iPads';
-@import 'Page About Me Mobile & Tablet/page-about-me-mobile&tablet-iPhone4';
-@import 'Page About Me Mobile & Tablet/page-about-me-mobile&tablet-iPhone5';
-@import 'Page About Me Mobile & Tablet/page-about-me-mobile&tablet-iPhone6';
-@import 'Page About Me Mobile & Tablet/page-about-me-mobile&tablet-iPhone6+';
-@import 'Page About Me Mobile & Tablet/page-about-me-mobile&tablet-smartphones';
+
+@import 'Page About Me Mobile & Tablet/page-about-me-large-mobile';
+@import 'Page About Me Mobile & Tablet/page-about-me-medium-mobile';
+@import 'Page About Me Mobile & Tablet/page-about-me-small-mobile';
+
 @import 'Style Podstawowe/style-podstawowe';
