--- a/css/style.css
+++ b/css/style.css
@@ -135,74 +135,7 @@ body { background: white; }
 @media only screen and (min-width: 1824px) { .col-8 > .banner { width: 620px; height: 350px; float: left; margin: 170px 0px 0px 130px; }
   .col-8 > .logo { float: left; width: 115px; height: 100px; margin: 50px 0px 0px 140px; } }
 
-/* Samsung Galaxy S3 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 640px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-@media only screen and (min-device-width: 320px) and (max-device-height: 640px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-/* Samsung Galaxy S4 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 640px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 3) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-@media only screen and (min-device-width: 320px) and (max-device-height: 640px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-/* Samsung Galaxy S5 ----------- */
-@media only screen and (min-device-width: 360px) and (max-device-height: 640px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 3) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-@media only screen and (min-device-width: 360px) and (max-device-height: 640px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 3) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-/* iPad ----------- */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-/* iPads (landscape) ----------- */
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: portrait) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-/* iPhone 4 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: landscape) and (-webkit-min-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: portrait) and (-webkit-min-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-/* iPhone 5 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-/* iPhone 6 ----------- */
-@media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-@media only screen and (min-device-width: 375px) and (max-device-height: 667px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-/* iPhone 6+ ----------- */
-@media only screen and (min-device-width: 414px) and (max-device-height: 736px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-@media only screen and (min-device-width: 414px) and (max-device-height: 736px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-/* iPhone 5 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
+@media (max-width: 767px) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
   .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
 
 body { margin: 0 auto; height: 10px; }
@@ -255,75 +188,5 @@ body { margin: 0 auto; height: 10px; }
   .what-i { text-decoration: line-through; font-size: 70px; }
   .menu-container { margin: 30px 0px 0px 150px; display: -ms-flexbox; cursor: pointer; -ms-flex-align: center; align-items: center; -ms-flex-pack: center; justify-content: center; position: fixed; }
   .me-mobile { display: none; } }
-
-/* iPhone 5 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-/* iPhone 5 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-/* iPhone 5 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-/* iPhone 5 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-/* iPhone 5 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-/* iPhone 5 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-/* iPhone 5 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-/* iPhone 5 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-/* iPhone 5 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-/* iPhone 5 ----------- */
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: landscape) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
-
-@media only screen and (min-device-width: 320px) and (max-device-height: 568px) and (orientation: portrait) and (-webkit-device-pixel-ratio: 2) { .col-8 > .banner { width: 330px; height: 185px; float: left; margin: 20px 0px 0px 50px; }
-  .col-8 > .logo { float: left; width: 80px; height: 80px; margin: 10px 0px 0px 50px; } }
 
 html { text-align: center; font-family: 'Titillium Web', sans-serif; }
